(feat): Product Page

--- a/pages/login.html
+++ b/pages/login.html
@@ -65,8 +65,26 @@
             </div>
         </div>
     </nav>
-    <main>
-        I am login page
+    <main class="auth-page-wrapper">
+        <div class="card">
+            <h3 class="mt-5 pt-5 text-center">
+                Login
+            </h3>
+            <div class="card-body px-5">
+                <form class="p-5">
+                    <div class="mb-3">
+                        <div class="input-wrapper my-5">
+                            <label for="email" class="label">Email*</label>
+                            <input type="email" class="input-field" required id="email" placeholder="For eg: smilegupta@gmail.com" />
+                          </div>
+                    </div>
+                      <div class="input-wrapper my-5">
+                        <label for="password" class="label">Password*</label>
+                        <input type="password" class="input-field" required id="password" placeholder="For eg: *******" />
+                      </div>
+                </form>
+            </div>
+        </div>
     </main>
 </body>
 
