(feat): Added code for basic home page

--- a/index.html
+++ b/index.html
@@ -65,7 +65,19 @@
             </div>
         </div>
     </nav>
-    <main>
+    <main class="home-page-wrapper">
+        <div class="home-page-branding-images grid-50-50-layout></div>">
+            <img src="https://image-dock-uploads-be.s3.ap-south-1.amazonaws.com/image.2022-02-21T05%3A08%3A41.963Z" class="img-responsive img-square p-5"/>
+            <img src="https://image-dock-uploads-be.s3.ap-south-1.amazonaws.com/image.2022-02-21T05%3A09%3A26.158Z" class="img-responsive img-square p-5"/>
+        </div>
+        <div class="home-page-content">
+            <div class="home-page-content-title mb-3"> Welcome to Messa Soaps and Scrups </div>
+            <p class="home-page-content-description mb-3">We offer widerange of handmade skin care products</p>
+            <div class="home-page-content-cta mb-3">
+                <a href="./pages/products.html" class="link-no-style"><button class="btn btn-solid-primary"> Explore
+                Now! </button></a>
+            </div>
+        </div>
     </main>
 </body>
 
