--- a/pages/login.html
+++ b/pages/login.html
@@ -72,16 +72,17 @@
             </h3>
             <div class="card-body px-5">
                 <form class="p-5">
-                    <div class="mb-3">
-                        <div class="input-wrapper my-5">
-                            <label for="email" class="label">Email*</label>
-                            <input type="email" class="input-field" required id="email" placeholder="For eg: smilegupta@gmail.com" />
-                          </div>
-                    </div>
+                    <div class="input-wrapper my-5">
+                        <label for="email" class="label">Email*</label>
+                        <input type="email" class="input-field" required id="email" placeholder="For eg: smilegupta@gmail.com" />
+                      </div>
                       <div class="input-wrapper my-5">
                         <label for="password" class="label">Password*</label>
                         <input type="password" class="input-field" required id="password" placeholder="For eg: *******" />
                       </div>
+                      <button class="btn btn-solid-primary">
+                        Login
+                      </button>
                 </form>
             </div>
         </div>
