--- a/pages/cart.html
+++ b/pages/cart.html
@@ -65,8 +65,36 @@
             </div>
         </div>
     </nav>
-    <main>
-        I am cart page
+    <main class="cart-page-wrapper">
+        <h2 class="text-center my-3 text-bold">My Cart</h2>
+        <div class="cart-items-wrapper">
+            <div class="card card-horizontal m-4">
+                <div class="card-image-wrapper">
+                  <img
+                    src="https://image-dock-uploads-be.s3.ap-south-1.amazonaws.com/image.2022-02-20T20%3A35%3A36.591Z"
+                    alt="jacket" class="img-responsive img-square" />
+                </div>
+                <div class="card-body p-4">
+                  <div class="card-title mb-2">
+                    Jacket
+                  </div>
+                  <div class="card-title mb-2">
+                    Rs. 3,000 <span class="ecom-original-price px-2"> Rs. 999 </span> <span class="ecom-discount"> (10% OFF)
+                    </span>
+                  </div>
+                  <div class="card-content mb-2">
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptates, inventore nisi. Dolore quo quas
+                    illo sed ullam labore totam sint.
+                  </div>
+                  <button class="btn btn-solid-primary my-2">
+                    Add to cart
+                  </button>
+                  <button class="btn btn-outline-primary my-2">
+                    Add to wishlist
+                  </button>
+                </div>
+              </div>
+        </div>
     </main>
 </body>
 
