(feat): Basic Cart Page Done

--- a/pages/login.html
+++ b/pages/login.html
@@ -80,7 +80,7 @@
                         <label for="password" class="label">Password*</label>
                         <input type="password" class="input-field" required id="password" placeholder="For eg: *******" />
                       </div>
-                      <button class="btn btn-solid-primary">
+                      <button class="btn btn-solid-primary w-100">
                         Login
                       </button>
                 </form>
